# uneven-ground-driving

./: .flake8  .gitignore  Dockerfile  Pipfile  README.md  main.py  plot_error_ellipse.py  plot_loss.py
.github/workflows/: build.yml  ci.yml
src/: analyzer.py
src/simulator/: CMakeLists.txt  package.xml
src/simulator/launch/: change_robot_position.launch  make_dataset.launch  teleop_key.launch
src/simulator/nodes/: change_robot_position  config.py  context_holder.py  make_dataset  odometry.py  position.py  teleop_key
src/training/: driving_record.py  main.py
src/training/nnet/: base_nnet.py  cnn.py  resnet.py
