<?xml version="1.0"?>
<package format="2">
  <name>simulator</name>
  <version>0.0.0</version>
  <description>The simulator package</description>
  <maintainer email="averak.jp@gmail.com">Averak</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>
